syntax = "proto3";
package stayking.levstakeibc;

import "gogoproto/gogo.proto";

option go_package = "github.com/soohoio/stayking/v2/x/levstakeibc/types";

// Params defines the parameters for the module.
// next id: 18
message Params {
  option (gogoproto.goproto_stringer) = false;


  // define epoch lengths, in stayking_epochs
  uint64 rewards_interval = 1;
  uint64 deposit_interval = 2;
  uint64 delegate_interval = 3;
  uint64 reinvest_interval = 4;
  uint64 redemption_rate_interval = 5;

  uint64 stayking_commission = 6;
  map<string, string> zone_com_address = 7;

  uint64 ibc_timeout_blocks = 8;
  uint64 ibc_transfer_timeout_nanos = 9;
  uint64 fee_transfer_timeout_nanos = 10;

  uint64 ica_timeout_nanos = 11;
  uint64 max_stake_ica_calls_per_epoch = 12;


  uint64 validator_rebalancing_threshold = 13;
  uint64 buffer_size = 14;

  uint64 safety_min_redemption_rate_threshold = 15;
  uint64 safety_max_redemption_rate_threshold = 16;
  uint64 safety_num_validators = 17;
  uint64 safety_max_slash_percent = 18;
}